Tue Sep 20 23:02:50 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gc.c (gc_start_internal): [DOC] add ObjectSpace.garbage_collect
	  and fix GC#garbage_collect.  [Bug #12777]

Tue Sep 20 21:24:01 2016  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* doc/extension.ja.rdoc: translate r56189 (rb_gc_adjust_memory_usage).

Tue Sep 20 17:52:28 2016  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* gems/bundled_gems: Update rake-11.3.0

Tue Sep 20 16:52:23 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gc.c (rb_gc_adjust_memory_usage): notify memory usage to the GC
	  engine by extension libraries, to trigger GC.  [Feature #12690]

Mon Sep 19 17:05:22 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* numeric.c (Init_Numeric), bignum.c (Init_Bignum): deprecate
	  Fixnum and Bignum.  this may be reverted after previews.
	  [Feature #12739]

Mon Sep 19 10:36:53 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* enumerator.c (lazy_init_yielder): directly call stored functions.
	  [Feature #6183]

	* enumerator.c (lazy_add_method): create lazy enumerator which
	  uses lazy_init_yielder().

Sun Sep 18 22:48:54 2016  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rss/rss.rb (RSS::BaseModel): Remove needless codes.
	  [Bug #12773][ruby-dev:49813]
	  Reported by Kazuhiro NISHIYAMA. Thanks!!!

Sun Sep 18 19:23:47 2016  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* lib/sync.rb: Fix NameError when error.

Sat Sep 17 22:46:02 2016  Koichi ITO  <koic.ito@gmail.com>

	* vm_insnhelper.c (vm_throw_start): Remove too much ";"
	  [fix GH-1432]

Sat Sep 17 19:19:06 2016  Kazuki Yamaguchi  <k@rhe.jp>

	* test/openssl/test_ssl.rb (test_ctx_options): Fix test failure on
	  Ubuntu 16.04. The fix in r56147 was incomplete. This is a cherry-pick
	  of the commit b039f3e268c2 at ruby/openssl.

Sat Sep 17 10:49:35 2016  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* doc/extension.ja.rdoc: translate r56130 (rb_check_arity).

Sat Sep 17 02:40:52 2016  Aaron Patterson <tenderlove@ruby-lang.org>
